# MaskOps

./: .gitignore  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  file_tree.ini  index.html  nextsession.md  pyproject.toml  release-please-config.json  robots.txt  sitemap.xml
.claude/: settings.json
.claude/agents/: crypto-compliance-reviewer.md  pii-pattern-reviewer.md
.claude/skills/kimi-optimize/: SKILL.md
.claude/skills/kimi-qa/: SKILL.md
.claude/skills/kimi-security/: SKILL.md  gdpr-rules.md
.claude/skills/new-pii-pattern/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark_presidio.yml  ci.yml  cla.yml  pages.yml  publish.yml  release-please.yml
.kimi/skills/kimi-optimize/: prompt-template.md
.kimi/skills/kimi-qa/: SKILL.md  prompt-template.md
.kimi/skills/kimi-review/: SKILL.md  prompt-template.md
.kimi/skills/kimi-security/: SKILL.md  prompt-template.md
benchmarks/: RESULTS.md  benchmark.py  benchmark_1m.py  benchmark_presidio.py  gen_benchmark_data.py
docs/: CHANGELOG.md  discoverability-research.md  gtm-playbook-2026.md  latam_pii_market_rationale.md  pricing-research-chile-brazil-2026.md  v2_migration.md
docs/gdpr/: fpe-ff3-1-nist-status.md  gdpr-reference.md
docs/regulatory/: latam-privacy-laws.md
docs/sales/: paid-pilot-agreement.md  pricing-tiers.md  wtp-survey.md
docs/security/: maskops-python.cdx.json  maskops.cdx.json  trust.md
docs/superpowers/plans/: 2026-06-04-kimi-skills.md
docs/superpowers/specs/: 2026-06-03-chile-gtm-design.md  2026-06-03-v3-roadmap-design.md  2026-06-04-kimi-skills-design.md
maskops/: __init__.py  __init__.pyi  _cli.py  _cli.pyi  _keys.py  _keys.pyi  _manifest.py  _manifest.pyi  _policy.py  _policy.pyi
src/: lib.rs
src/patterns/: consistent.rs  country_codes.rs  cpf.rs  credit_card.rs  curp.rs  european_id.rs  fpe.rs  fpe_ff1.rs  ip.rs  latam_id.rs  mod.rs  phone.rs  rekey.rs  rut.rs
src/patterns/apac/: australia_tfn.rs  canada_sin.rs  japan_my_number.rs  korea_rrn.rs  mod.rs
src/patterns/contact/: email.rs  ip.rs  mod.rs  phone.rs
src/patterns/eu/: bsn.rs  codice_fiscale.rs  european_id.rs  iban.rs  mod.rs  nir.rs  personnummer.rs  pesel.rs  vat.rs
src/patterns/financial/: credit_card.rs
src/patterns/healthcare/: mbi.rs  mod.rs  nhs.rs  npi.rs
src/patterns/latam/: brazil_cnpj.rs  ecuador.rs  latam_id.rs  mod.rs  peru.rs  uruguay.rs
src/patterns/mea/: israel.rs  mod.rs  south_africa.rs
src/patterns/us/: mod.rs  passport.rs  ssn.rs
tests/: generate_fixtures.py  test_cli.py  test_manifest.py  test_masking.py  test_policy.py
tests/typing/: usage.py
tools/: devto_post.py  release.py
tools/hooks/: no_comments_guard.py  release_guard.py  stale_check.py
tools/release/: release.py
tools/sbom/: generate.sh
tools/social/: CLAUDE.md  devto_post.py  devto_reminder.py  render_cover.py
tools/social/devto/: 2026-06-11-pii-masking-in-polars-maskops-2.0.md  2026-07-02-fpe-ff3-1-vs-ff1-for-latam-ids.md  2026-07-23-polars-plugin-rust.md
tools/social/linkedin/: 2026-06-11-maskops-2.0.md  2026-07-02-fpe-ff3-1-vs-ff1.md  2026-07-23-polars-plugin-rust.md
