[package]
name = "maskops"
version = "0.1.1"
edition = "2021"

[lib]
name = "maskops"
crate-type = ["cdylib"]

[dependencies]
pyo3-polars = { version = "0.23", features = ["derive"] }
pyo3 = { version = "0.25", features = ["extension-module"] }
regex = "1.10"
once_cell = "1.19"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true